--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -12,7 +12,15 @@
     </head>
     <body>
       <header><h1>City of Apopka Chamber Site Plan</h1></header>
-        <nav></nav>
+      <a id="menu"></a>
+      <nav>
+        <!--<ul class="navigation">
+          <li><a href="wdd230/index.html">Home</a></li>
+          <li class="active"><a href="wdd230/week01/chamber-site-plan.html">Site Plan</a></li>
+          <li><a href="wdd230/chamber/index.html" target="_blank">Chamber</a></li>
+          <li><a href="wdd230/form.html">Form</a></li>
+        </ul> !-->
+      </nav>
     <main>
         <br>
         <h2>Site Name</h2>
@@ -63,7 +71,11 @@
         <img src="images/ChamberWireframeMobile.jpg" alt="Mobile Home Page Wireframe" width="300">
         </div>    
     </main>
-        <footer>&copy; 2023 | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 01 - Fall 2023</footer>
-        <script src="scripts/"></script>
+        <footer>
+            <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; WEEK ONE &bull; WDD 230-1B - Fall 2023</p>
+            <p id="lastModified"></p>
+        </footer>
+        <script src="scripts/getDates.js"></script>
+        <script src="scripts/menu.js"></script>
 </body>
 </html>
