--- a/form.html
+++ b/form.html
@@ -13,21 +13,25 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpeg">
     <meta property="og:url" content="https://raeland.github.io/wdd230/">
     <link rel="icon" href="favicon.ico">
+    <link href="styles/form.css" rel="stylesheet">
     <link href="styles/normalize.css" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/larger.css" rel="stylesheet">
-    <link href="styles/form.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
-  <body>
-    <header><h1>Page Title | Heading ONE</h1></header>
+<body>
+<header>
+  <img src=images/profile.jpg alt="Rachael Varady Profile Image" width="75" height="175">
+  <h1 id="h1">Rachael S Varady</h1>
+  <img src="images/dark.svg" alt="dark mode" id="darkBtn">
+</header>
     <a id="menu"></a>
       <nav>
         <ul class="navigation">
-          <li><a href="#">Home</a></li>
-          <li><a href="week01/chamber-site-plan.html" target="_blank">Site Plan</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
           <li><a href="chamber/index.html" target="_blank">Chamber</a></li>
-          <li class="active"><a href="form.html" target="_blank">Form</a></li>
+          <li class="active"><a href="form.html">Form</a></li>
         </ul>
       </nav>
     <main>
