--- a/form.html
+++ b/form.html
@@ -71,5 +71,6 @@
       </footer>
       <script src="scripts/getDates.js"></script>
       <script src="scripts/menu.js"></script>
+      <script src="scripts/form.js"></script>
 </body>
 </html>
