--- a/form.html
+++ b/form.html
@@ -48,7 +48,8 @@
       <fieldset>
           <legend>Page Rating</legend>
           <div id="rangeValue">1</div>
-          <label class="slider">Page Rating Slider<input type="range" name="rating" id="rating" min="1" max="10" value="1" step="1" list="rangeValues"></label>
+          <label class="slider">Page Rating Slider<input type="range" id="r" name="r" min="1" max="10" value="1" step="1" list="rangevalues">
+          </label>
           <datalist id="rangeValues">
           <option value="1">1</option>
           <option value="2">2</option>
