--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -21,9 +21,9 @@
     <nav>
         <a id="menu"></a>
         <ul class="navigation">
-          <li class="active"><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join</a></li>
-          <li><a href="discover.html">Discover</a></li>
+          <li class="active"><a href="discover.html">Discover</a></li>
           <li><a href="#">Events</a></li>
         </ul>
     </nav>
