--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Rachael S Varady - WDD230 - Web Frontend Development</title>
-    <meta name="description" content="This is an updated version of the home page I created last week. WDD230 Course Home Page">
+    <meta name="description" content="Home page I created for WDD230 Course">
     <meta name="author" content="Rachael S Varady">
     <meta property="og:title" content="Rachael S Varady - WDD230 - Web Frontend Development">
     <meta property="og:type" content="website">
