--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -14,7 +14,7 @@
             <picture>
                 <source srcset="images/hero-small.webp" media="(max-width: 500px)">
                 <source srcset="images/hero-medium.webp" media="(max-width: 1000px)">
-                <img src="images/hero-large.webp" alt="Feather River California Temple" width="1500" height="998">
+                <img srcset="images/hero-large.webp" alt="Feather River California Temple" width="500" height="998">
             </picture>
         </div>
     </main>
