--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>City of Apopka Chamber of Commerce</title>
-    <meta name="description" content="Home Page to the Apopka Chamber of Commerce Website">
+    <meta name="description" content="Join the Apopka Chamber of Commerce Website">
     <meta name="author" content="Rachael S Varady">
-    <meta property="og:title" content="Rachael S Varady - WDD 230 - City of Apopka Chamber of Commerce">
+    <meta property="og:title" content="City of Apopka Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpeg">
     <meta property="og:url" content="https://raeland.github.io/wdd230/chamber/">
