--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <h1 id="h1">City of Apopka Chamber of Commerce</h1>
+        <h1>City of Apopka Chamber of Commerce</h1>
     </header>
     <nav>
         <a id="menu"></a>
