--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>City of Apopka Chamber of Commerce</title>
-    <meta name="description" content="Home Page to the Apopka Chamber of Commerce Website">
+    <meta name="description" content="Discover the Apopka Chamber of Commerce Website">
     <meta name="author" content="Rachael S Varady">
     <meta property="og:title" content="Rachael S Varady - WDD 230 - City of Apopka Chamber of Commerce">
     <meta property="og:type" content="website">
