--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,6 +48,8 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus illum incidunt laboriosam corporis culpa magni harum minus quas, blanditiis debitis vitae earum totam perspiciatis eveniet dolorem non facilis sequi ipsum temporibus tenetur cupiditate provident! At culpa itaque accusamus expedita voluptates soluta neque doloribus saepe, tenetur reiciendis, cumque odio? Labore, tempora!</p>
             </div>
         </div>
+        </section>
+        <section>
         <picture>
             <img src="images/downtown.jpeg" alt="downtown apopka bridge" loading="lazy" width="600" height="400">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum pariatur a voluptate corporis quisquam non assumenda magni rem at inventore totam maxime reiciendis numquam dicta nihil hic repellat harum itaque voluptatibus laborum, autem, natus expedita. Consequatur, quae reprehenderit incidunt odio magni nam molestias illo, voluptatem asperiores dolores aliquid explicabo inventore harum quis quam blanditiis facilis atque ut placeat ducimus dolorem amet accusamus consequuntur corporis! Nemo aperiam vitae assumenda ullam suscipit, impedit magni veniam excepturi qui, perspiciatis porro accusantium quos! Reiciendis cum velit ratione mollitia iste quis placeat dolor maiores eum dicta? Recusandae laborum amet aspernatur eos quis fugit, tempora ab!</p>
@@ -72,6 +74,7 @@
             <img src="images/gator.jpg" alt="gator at trail" loading="lazy" width="600" height="400">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum pariatur a voluptate corporis quisquam non assumenda magni rem at inventore totam maxime reiciendis numquam dicta nihil hic repellat harum itaque voluptatibus laborum, autem, natus expedita. Consequatur, quae reprehenderit incidunt odio magni nam molestias illo, voluptatem asperiores dolores aliquid explicabo inventore harum quis quam blanditiis facilis atque ut placeat ducimus dolorem amet accusamus consequuntur corporis! Nemo aperiam vitae assumenda ullam suscipit, impedit magni veniam excepturi qui, perspiciatis porro accusantium quos! Reiciendis cum velit ratione mollitia iste quis placeat dolor maiores eum dicta? Recusandae laborum amet aspernatur eos quis fugit, tempora ab!</p>
         </picture>
+        </section>
     </main>
     <footer>
         <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
