--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -28,8 +28,7 @@
           <li><a href="#">Events</a></li>
         </ul>
     </nav>
-    <main>
-        <div class="city-gird">
+    <main class="city-gird">
             <h1>City of Apopka</h1>
         <section class="sidebar">
             <div class="sidebar-card">
