--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="form.html" target="_blank">Form</a></li>
         </ul>
     </nav>
-    <main>
+    <main class="grid">
         <div class="hero">
             <picture>
                 <source srcset="images/hero-small.webp" media="(max-width: 500px)">
