meta content title

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -6,7 +6,7 @@
     <title>Discover The City of Apopka Chamber of Commerce</title>
     <meta name="description" content="Discover the Apopka Chamber of Commerce Website">
     <meta name="author" content="Rachael S Varady">
-    <meta property="og:title" content="Rachael S Varady - WDD 230 - City of Apopka Chamber of Commerce">
+    <meta property="og:title" content="Discover the Apopka Chamber of Commerce Website">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpeg">
     <meta property="og:url" content="https://raeland.github.io/wdd230/chamber/">
