grid fix spelling

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -28,8 +28,8 @@
           <li><a href="#">Events</a></li>
         </ul>
     </nav>
-    <main class="city-gird">
-            <h1>City of Apopka</h1>
+    <main class="city-grid">
+        <h1>Discover The City of Apopka</h1>
         <section class="sidebar">
             <div class="sidebar-card">
                 <div id="days"></div>
