--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -32,7 +32,7 @@
         <h1>Discover The City of Apopka</h1>
         <section class="sidebar">
             <div class="sidebar-card">
-                <div id="days"></div>
+                <div id="days">You Soared Back to Us!</div>
             </div>
             <div class="sidebar-card">
                 <h2>Current Events</h2>
@@ -51,27 +51,33 @@
         <section>
         <picture>
             <img src="images/downtown.jpeg" alt="downtown apopka bridge" loading="lazy" width="600" height="400">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum pariatur a voluptate corporis quisquam non assumenda magni rem at inventore totam maxime reiciendis numquam dicta nihil hic repellat harum itaque voluptatibus laborum, autem, natus expedita. Consequatur, quae reprehenderit incidunt odio magni nam molestias illo, voluptatem asperiores dolores aliquid explicabo inventore harum quis quam blanditiis facilis atque ut placeat ducimus dolorem amet accusamus consequuntur corporis! Nemo aperiam vitae assumenda ullam suscipit, impedit magni veniam excepturi qui, perspiciatis porro accusantium quos! Reiciendis cum velit ratione mollitia iste quis placeat dolor maiores eum dicta? Recusandae laborum amet aspernatur eos quis fugit, tempora ab!</p>
+            <h3>Downtown Apopka Bike Trail Bridge</h3>
+            <p>Loreerspiciatis porro accusantium quos! Reiciendis cum velit ratione mollitia iste quis placeat dolor maiores eum dicta? Recusandae laborums fugit, tempora ab!</p>
         </picture>
         <picture>
             <img src="images/amphatheater.jpeg" alt="amphatheater concert" loading="lazy" width="600" height="400">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum pariatur a voluptate corporis quisquam non assumenda magni rem at inventore totam maxime reiciendis numquam dicta nihil hic repellat harum itaque voluptatibus laborum, autem, natus expedita. Consequatur, quae reprehenderit incidunt odio magni nam molestias illo, voluptatem asperiores dolores aliquid explicabo inventore harum quis quam blanditiis facilis atque ut placeat ducimus dolorem amet accusamus consequuntur corporis! Nemo aperiam vitae assumenda ullam suscipit, impedit magni veniam excepturi qui, perspiciatis porro accusantium quos! Reiciendis cum velit ratione mollitia iste quis placeat dolor maiores eum dicta? Recusandae laborum amet aspernatur eos quis fugit, tempora ab!</p>
+            <h3>Fields Of Fame Amphatheater</h3>
+            <p>Ppsum dolor sit atur assumenda magni rem atam dicta nihil hic repellat haedit magni veniam excepturi qui, perspiciatis porro accusantium qciendis cum velit rationeat dolor maiores eum dicta? Recusandae labis fugit, tempora ab!</p>
         </picture>
         <picture>
             <img src="images/lakeapk.webp" alt="lake apopka" loading="lazy" width="600" height="400">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum pariatur a voluptate corporis quisquam non assumenda magni rem at inventore totam maxime reiciendis numquam dicta nihil hic repellat harum itaque voluptatibus laborum, autem, natus expedita. Consequatur, quae reprehenderit incidunt odio magni nam molestias illo, voluptatem asperiores dolores aliquid explicabo inventore harum quis quam blanditiis facilis atque ut placeat ducimus dolorem amet accusamus consequuntur corporis! Nemo aperiam vitae assumenda ullam suscipit, impedit magni veniam excepturi qui, perspiciatis porro accusantium quos! Reiciendis cum velit ratione mollitia iste quis placeat dolor maiores eum dicta? Recusandae laborum amet aspernatur eos quis fugit, tempora ab!</p>
+            <h3>Beatiful Lake Apopka</h3>
+            <p>Autem, natus expedita. Consequates aliquis quam blanditiis facilis atque ut  ducimus dolorem accusamus consequuntur corporis! ia iste quis placeat dolor maiores eum dicta? Recusandae laborum amet aspeb!</p>
         </picture>
         <picture>
             <img src="images/rocksprings.webp" alt="rocksprings" loading="lazy" width="600" height="400">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum pariatur a voluptate corporis quisquam non assumenda magni rem at inventore totam maxime reiciendis numquam dicta nihil hic repellat harum itaque voluptatibus laborum, autem, natus expedita. Consequatur, quae reprehenderit incidunt odio magni nam molestias illo, voluptatem asperiores dolores aliquid explicabo inventore harum quis quam blanditiis facilis atque ut placeat ducimus dolorem amet accusamus consequuntur corporis! Nemo aperiam vitae assumenda ullam suscipit, impedit magni veniam excepturi qui, perspiciatis porro accusantium quos! Reiciendis cum velit ratione mollitia iste quis placeat dolor maiores eum dicta? Recusandae laborum amet aspernatur eos quis fugit, tempora ab!</p>
+            <h3>The Famous Rock Springs</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum pariatur a voluptate corporis quisqu maxime reicta nihil hic repellat harum itaque vaborum amet aspernatur eos quis fugit, tempora ab.</p>
         </picture>
         <picture>
             <img src="images/trails.webp" alt="bike trail view" loading="lazy" width="600" height="400">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum pariatur a voluptate corporis quisquam non assumenda magni rem at inventore totam maxime reiciendis numquam dicta nihil hic repellat harum itaque voluptatibus laborum, autem, natus expedita. Consequatur, quae reprehenderit incidunt odio magni nam molestias illo, voluptatem asperiores dolores aliquid explicabo inventore harum quis quam blanditiis facilis atque ut placeat ducimus dolorem amet accusamus consequuntur corporis! Nemo aperiam vitae assumenda ullam suscipit, impedit magni veniam excepturi qui, perspiciatis porro accusantium quos! Reiciendis cum velit ratione mollitia iste quis placeat dolor maiores eum dicta? Recusandae laborum amet aspernatur eos quis fugit, tempora ab!</p>
+            <h3>View on Apopka Wilderness Bike Trail</h3>
+            <p>Earum paquae reprehenderit incidunt ountur corporis! Nemo aperiam vitae assumenda ullam suscipit, impedepturi qui, pecusantiumm velit ratione mollitia iste quis placeat dolor maiores eum dicta!</p>
         </picture>
         <picture>
             <img src="images/gator.jpg" alt="gator at trail" loading="lazy" width="600" height="400">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum pariatur a voluptate corporis quisquam non assumenda magni rem at inventore totam maxime reiciendis numquam dicta nihil hic repellat harum itaque voluptatibus laborum, autem, natus expedita. Consequatur, quae reprehenderit incidunt odio magni nam molestias illo, voluptatem asperiores dolores aliquid explicabo inventore harum quis quam blanditiis facilis atque ut placeat ducimus dolorem amet accusamus consequuntur corporis! Nemo aperiam vitae assumenda ullam suscipit, impedit magni veniam excepturi qui, perspiciatis porro accusantium quos! Reiciendis cum velit ratione mollitia iste quis placeat dolor maiores eum dicta? Recusandae laborum amet aspernatur eos quis fugit, tempora ab!</p>
+            <h3>Wilderness Apopka Trail - Gator Sighting</h3>
+            <p>Lorem ipsum dolor sit amet xcepturi qui, perspiciatis porro accusantium quos! Reiciendis cum velit ratione mollitia iste quis placeatandae laborum auis fugit, tempora ab.</p>
         </picture>
         </section>
     </main>
@@ -79,7 +85,7 @@
         <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
         <p id="lastModified"></p>
     </footer>
-    <script  src="scripts/hamburger-menu.js"></script>
+    <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/getDates.js"></script>
 </body>
 </html>
