--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,8 +28,8 @@
           <li><a href="#">Events</a></li>
         </ul>
     </nav>
-    <main>
-        <section class="card">
+    <main class="grid-home">
+        <section class="section">
             <h3>Join the Apopka Chamber of Commerce</h3>
             <p>Join here</p>
             <p></p>
