--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -19,7 +19,7 @@
         </div>
     </main>
     <footer>
-    <p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 03 - Fall 2023</p>
+    <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; WDD 230-1B - Week 03 - Fall 2023</p>
     <p id="lastModified"></p>
     <script src="scripts/getDates.js"></script>
 </footer>
