--- a/week05/weather.html
+++ b/week05/weather.html
@@ -16,7 +16,7 @@
       </figure>
     </main>
     <footer>
-        <p>&copy; &bull; <span id="currentYear"></span> | Rachael S Varady &bull; OpenWeatherMap.org | CC BY-SA 4.0</p>
+        <p>&copy; <span id="currentYear"></span> &bull; Rachael S Varady &bull; OpenWeatherMap.org | CC BY-SA 4.0</p>
         <p>&bull; BYU-Idaho &bull; WDD 230-1B - Week 05 - Fall 2023</p>
         <p id="lastModified"></p>
     </footer>
