--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <link href="styles/larger.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="dark-mode">
     <header>
         <img src=images/profile.jpg alt="Rachael Varady Profile Image" width="75" height="175">
         <h1 id="h1">Rachael S Varady</h1>
-        <img src="images/dark.svg" alt="dark mode" id="darkBtn">
+        <img src="images/dark.webp" alt="dark mode" id="darkBtn">
     </header>
         <a id="menu"></a>
         <nav>
