header and temple image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="styles/larger.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
-<body class="dark-mode">
+<body>
     <header>
         <img src=images/profile.jpg alt="Rachael Varady Profile Image" width="75" height="175">
         <h1 id="h1">Rachael S Varady</h1>
@@ -68,5 +68,6 @@
     </footer>
     <script src="scripts/getDates.js"></script>
     <script src="scripts/menu.js"></script>
+    <script src="mode.js"></script>
 </body>
 </html>
