--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src=images/profile.jpg alt="Rachael Varady Profile Image" width="75" height="175">
+        <img src=images/profile.webp alt="Rachael Varady Profile Image" width="75" height="175">
         <h1 id="h1">Rachael S Varady</h1>
         <img src="images/dark.webp" alt="dark mode" id="darkBtn">
     </header>
