put nav in header

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -17,8 +17,6 @@
 </head>
 <body>
     <header>
-        <h1>City of Apopka Chamber of Commerce</h1>
-    </header>
     <nav>
         <a id="menu"></a>
         <ul class="navigation">
@@ -28,23 +26,24 @@
           <li><a href="#">Events</a></li>
         </ul>
     </nav>
+</header>
     <main class="city-grid">
-        <h1>Discover The City of Apopka</h1>
+        <h1>Discover Apopka</h1>
         <section class="sidebar">
             <div class="sidebar-card">
                 <div id="days">You Soared Back to Us!</div>
             </div>
             <div class="sidebar-card">
                 <h2>Current Events</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit aut quasi minus cumque rerum ab amet explicabo quaerat aspernatur, praesentium, fugit tempore voluptates doloribus mollitia eveniet quisquam architecto atque saepe eligendi distinctio. Dignissimos asperiores, eius sunt iusto ducimus ipsam repellat tenetur nulla magni totam odit aperiam voluptatum magnam accusamus neque facilis temporibus quis, distinctio quisquam consequatur consectetur? Enim aliquid ipsum debitis, hic quod dicta libero cupiditate esse earum magnam tempora, corporis alias animi, asperiores qui nostrum ex dolorem minus labore fuga adipisci sunt. Commodi ratione animi, corporis unde cum facilis? Aut, nostrum vitae beatae est quas iste et voluptatem cumque?</p>
+                <p>Dignissimos asperiores, eius sunt iusto ducimus ipsam repellat tenetur nulla magni totamt aemporibus esse earum magnam tempora, qui nostrum ex labore fuga adipisci sunt. Commodi ratione animi, corporis unde cum facilis? Aut, nostrum vitae beatae est quas iste et voluptatem cumque?</p>
             </div>
             <div class="sidebar-card">
                 <h2>Information</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis iusto veritatis suscipit alias provident animi hic quam corrupti labore ut consequuntur laboriosam vitae quos perferendis, architecto iure dolorum, molestiae repudiandae amet voluptatibus accusantium minus ipsa. Quidem omnis cupiditate veritatis aperiam ullam numquam quisquam, impedit veniam libero quaerat facere saepe enim architecto amet, corporis ducimus ipsam commodi odio, sint error aut magni. Aperiam qui ex sint quos quis in, magni ab ipsa at itaque cum ut voluptatum provident labore nam? Fugit unde quo architecto recusandae, obcaecati animi quidem consequuntur quaerat aliquam aut doloremque nobis! Corporis quam provident obcaecati velit quia aliquid.</p>
+                <p>Blanditiis iusto veritatis suscipit alias provident animi hic quam corrupti labore ut consequuntur laboriosam vitae andaeos que cum ut voluptm? Fugit unde quo architecto recusandae, obcaecati animi quidem consequuntur quaerat aliquam aut doloremque nobis! Corporis quam provident obcaecati velit quia aliquid.</p>
             </div>
             <div class="sidebar-card">
                 <h2>Company Spotlight</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus illum incidunt laboriosam corporis culpa magni harum minus quas, blanditiis debitis vitae earum totam perspiciatis eveniet dolorem non facilis sequi ipsum temporibus tenetur cupiditate provident! At culpa itaque accusamus expedita voluptates soluta neque doloribus saepe, tenetur reiciendis, cumque odio? Labore, tempora!</p>
+                <p>Repellendus illum incidunt laboriosam corporis culpa magni harum minus quas, blanditiis debitnon facilis sequi iamus expedoloribus saepe, tenetur reiciendis, cumque odio? Labore, tempora!</p>
             </div>
         </div>
         </section>
