class to picture sidebar

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -46,7 +46,7 @@
                 <p>Repellendus illum incidunt laboriosam corporis culpa magni harum minus quas, blanditiis debitnon facilis sequi iamus expedoloribus saepe, tenetur reiciendis, cumque odio? Labore, tempora!</p>
             </div>
         </section>
-        <section>
+        <section class="sidebar">
         <picture>
             <img src="images/downtown.jpeg" alt="downtown apopka bridge" loading="lazy" width="600" height="400">
             <h3>Downtown Apopka Bike Trail Bridge</h3>
