--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -47,36 +47,36 @@
             </div>
         </section>
         <section class="sidebar">
-        <picture>
+        <div>
             <img src="images/downtown.jpeg" alt="downtown apopka bridge" loading="lazy" width="600" height="400">
             <h3>Downtown Apopka Bike Trail Bridge</h3>
             <p>Loreerspiciatis porro accusantium quos! Reiciendis cum velit ratione mollitia iste quis placeat dolor maiores eum dicta? Recusandae laborums fugit, tempora ab!</p>
-        </picture>
-        <picture>
+        </div>
+        <div>
             <img src="images/amphatheater.jpeg" alt="amphatheater concert" loading="lazy" width="600" height="400">
             <h3>Fields Of Fame Amphatheater</h3>
             <p>Ppsum dolor sit atur assumenda magni rem atam dicta nihil hic repellat haedit magni veniam excepturi qui, perspiciatis porro accusantium qciendis cum velit rationeat dolor maiores eum dicta? Recusandae labis fugit, tempora ab!</p>
-        </picture>
-        <picture>
+        </div>
+        <div>
             <img src="images/lakeapk.webp" alt="lake apopka" loading="lazy" width="600" height="400">
             <h3>Beatiful Lake Apopka</h3>
             <p>Autem, natus expedita. Consequates aliquis quam blanditiis facilis atque ut  ducimus dolorem accusamus consequuntur corporis! ia iste quis placeat dolor maiores eum dicta? Recusandae laborum amet aspeb!</p>
-        </picture>
-        <picture>
+        </div>
+        <div>
             <img src="images/rocksprings.webp" alt="rocksprings" loading="lazy" width="600" height="400">
             <h3>The Famous Rock Springs</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum pariatur a voluptate corporis quisqu maxime reicta nihil hic repellat harum itaque vaborum amet aspernatur eos quis fugit, tempora ab.</p>
-        </picture>
-        <picture>
+        </div>
+        <div>
             <img src="images/trails.webp" alt="bike trail view" loading="lazy" width="600" height="400">
             <h3>View on Apopka Wilderness Bike Trail</h3>
             <p>Earum paquae reprehenderit incidunt ountur corporis! Nemo aperiam vitae assumenda ullam suscipit, impedepturi qui, pecusantiumm velit ratione mollitia iste quis placeat dolor maiores eum dicta!</p>
-        </picture>
-        <picture>
+        </div>
+        <div>
             <img src="images/gator.jpg" alt="gator at trail" loading="lazy" width="600" height="400">
             <h3>Wilderness Apopka Trail - Gator Sighting</h3>
             <p>Lorem ipsum dolor sit amet xcepturi qui, perspiciatis porro accusantium quos! Reiciendis cum velit ratione mollitia iste quis placeatandae laborum auis fugit, tempora ab.</p>
-        </picture>
+        </div>
         </section>
     </main>
     <footer>
