--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,7 +55,8 @@
         <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
         <p id="lastModified"></p>
     </footer>
-    <script  src="scripts/hamburger-menu.js"></script>
+    <script src="scripts/chamber.js"></script>
+    <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/getDates.js"></script>
 </body>
 </html>
