--- a/form-start/index.html
+++ b/form-start/index.html
@@ -81,8 +81,9 @@
 
 
     <footer>
-        <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; WDD 230-1B &bull; Week 04 &bull; Fall 2023</p>
+        <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; WDD 230-1B - Week 04 - Fall 2023</p>
         <p id="lastModified"></p>
+        <script src="scripts/getDates.js"></script>
     </footer>
     <script src="scripts/scripts.js"></script>
 </body>
