--- a/chamber/join.html
+++ b/chamber/join.html
@@ -22,8 +22,8 @@
     <nav>
         <a id="menu"></a>
         <ul class="navigation">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="join.html">Join</a></li>
+          <li><a href="#">Home</a></li>
+          <li class="active"><a href="join.html">Join</a></li>
           <li><a href="discover.html">Discover</a></li>
           <li><a href="#">Events</a></li>
         </ul>
@@ -41,7 +41,7 @@
                 <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
             </fieldset>
             <fieldset>
-                <legend>Membership Level</legend>
+                <legend>Select Membership Level</legend>
                 <label class="sbs"><input type="radio" name="membership" value="np"> NP Membership</label>
                 <p>Free<br>
                     • Member pricing on events, products, and services<br>
