--- a/index.html
+++ b/index.html
@@ -44,19 +44,21 @@
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card">
             <h3>Learning Activities</h3>
-            <ul class="activities">
-                <li>Week 01 <a href="week01/holygrail.html"> Grail</a> &bull; <a href="week01/media-query.html">Media Query</a> &bull; <a href="week01/js-pen.html">JS Pen</a></li>
-                <li>Week 02 <a href="week02/design.html"> Design</a> &bull; <a href="week02/hamburger-menu.html">Hamburger</a> &bull; <a href="week02/bom.html">BOM</a></li>
-                <li>Week 03 <a href="week03/responsive-images.html"> WebP</a> &bull; <a href="week03/lazyload.html">Lazy</a> &bull; <a href="week03/responsive-images.html">Srcset</a> &bull; <a href="week03/bom.html">Local Storage</a>
-                <li>Week 04 <a href="#"></a></li>
-                <li>Week 05 <a href="#"></a></li>
-                <li>Week 06 <a href="#"></a></li>
-                <li>Week 07 <a href="#"></a></li>
-            </ul>
+            <div class="card-box">
+                <section class="card">
+                    <ul class="card-list">
+                    </ul>
+                </section>
+              </div>
         </section>
         <section class="card">
             <h3>Information</h3>
+            <p>Apopka, Florida</p>
             <p>Weather: <span id="weather">Always Sunny</span></p>
+            <figure class="weather">
+                <img id="weather-icon" src="data:," alt="">
+                <figcaption></figcaption>
+              </figure>
             <p>Number of Visits:</p>
         </section>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d111984.65253155297!2d-81.60617371731246!3d28.70399016539981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77739cc157c19%3A0xd71d0f8ffc80e888!2sApopka%2C%20FL!5e0!3m2!1sen!2sus!4v1700536635540!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -68,5 +70,7 @@
     <script src="scripts/getDates.js"></script>
     <script src="scripts/menu.js"></script>
     <script src="mode.js"></script>
+    <script src="scripts/links.js"></script>
+    <script src="scripts/weather.js"></script>
 </body>
 </html>
