--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         </div>
         </div>
         <h2>WDD 230: Web Frontend Development</h2>
-        <section class="card">
+        <div class="card-box">
+            <section class="card">
             <h3>Learning Activities</h3>
-            <div class="card-box">
-                <section class="card">
-                    <ul class="card-list">
-                    </ul>
-                </section>
-              </div>
+            <section class="card">
+                <ul class="card-list">
+                </ul>
+            </section>
+        </div>
         </section>
         <section class="card">
             <h3>Information</h3>
@@ -69,7 +69,7 @@
     </footer>
     <script src="scripts/getDates.js"></script>
     <script src="scripts/menu.js"></script>
-    <script src="mode.js"></script>
+    <script src="scripts/mode.js"></script>
     <script src="scripts/links.js"></script>
     <script src="scripts/weather.js"></script>
 </body>
