--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>City of Apopka Chamber of Commerce</title>
+    <title>Join Apopka Chamber of Commerce</title>
     <meta name="description" content="Join the Apopka Chamber of Commerce Website">
     <meta name="author" content="Rachael S Varady">
     <meta property="og:title" content="Join the Apopka Chamber of Commerce">
