--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li class="active"><a href="#">Home</a></li>
         <li><a href="week01/chamber-site-plan.html" target="_blank">Site Plan</a></li>
         <li><a href="chamber/index.html" target="_blank">Chamber</a></li>
-        <li><a href="form.html" target="_blank">Form</a></li>
+        <li><a href="form.html">Form</a></li>
         </ul>
     </nav>
     <main class="grid">
@@ -60,6 +60,7 @@
                 <figcaption></figcaption>
               </figure>
             <p>Number of Visits:</p>
+            <p class="card-paragraph-3">Page Visits:&nbsp;&nbsp;&nbsp;<span class="visits"></span></p>
         </section>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d111984.65253155297!2d-81.60617371731246!3d28.70399016539981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77739cc157c19%3A0xd71d0f8ffc80e888!2sApopka%2C%20FL!5e0!3m2!1sen!2sus!4v1700536635540!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
