head, meta, added scripts after footer

--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -2,17 +2,12 @@
 <html lang="en-US"
 >
 <head>
-  <meta charset=
- >
-  <meta name=
- content=
->
-  <title>Title of Page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>Latter-day Progphets Activity</title>
   <meta name="description" content="Use keywords to describe page">
-  <meta name=
- content=
->
-  <link rel="stylesheet" href="styles/filename">
+  <meta name="author" content="Prophets page"
+  <link rel="stylesheet" href="styles/prophets.css">
 </head>
   <body>
       <header>
@@ -23,10 +18,11 @@
         <div id="cards"></div>
     </main>
         <footer>
-            <p>&copy; 2023 &bull; Rachael S Varady | Latter-day Prophets</p>
+            <p>&copy; 2023 <span id="currentYear"></span> &bull; Rachael S Varady | Latter-day Prophets</p>
             <p>BYU-Idaho &bull;  WDD 230-1B - Week 05 - Fall 2023</p>
             <p id="lastModified"></p>
     </footer>
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/prophets.js"></script>
 </body>
 </html>
