--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Latter-day Progphets Activity</title>
   <meta name="description" content="Use keywords to describe page">
-  <meta name="author" content="Prophets page"
+  <meta name="author" content="Prophets page">
   <link rel="stylesheet" href="styles/prophets.css">
 </head>
   <body>
