--- a/index.html
+++ b/index.html
@@ -43,13 +43,10 @@
         </div>
         <h2>WDD 230: Web Frontend Development</h2>
         <div class="card-box">
-            <section class="card">
-            <h3>Learning Activities</h3>
-            <section class="card">
-                <ul class="card-list">
-                </ul>
-            </section>
-        </div>
+            <div class="cardlist">
+                
+            </div>
+
         </section>
         <section class="card">
             <h3>Information</h3>
@@ -70,7 +67,7 @@
     <script src="scripts/getDates.js"></script>
     <script src="scripts/menu.js"></script>
     <script src="scripts/mode.js"></script>
-    <script src="scripts/links.js"></script>
+    <script defer src="scripts/links.js"></script>
     <script src="scripts/weather.js"></script>
 </body>
 </html>
