--- a/form.html
+++ b/form.html
@@ -39,8 +39,8 @@
           <legend>User Information</legend>
           <div id="formMessage"></div>
           <label class="top">Username* <input type="text" name="username" id="username" required></label>
-          <label class="top">Password* <input type="password" name="password1" id="pwd1" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required></label>
-          <label class="top">Repeat Password* <input type="password" name="password2" id="pwd2" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required></label>
+          <label class="top">Password* <input type="password" name="password1" id="pw1" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required></label>
+          <label class="top">Repeat Password* <input type="password" name="password2" id="pw2" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required></label>
           <label class="top">Email* <input type="email" name="email" placeholder="someone@byui.edu" id="email" pattern="[a-zA-Z0-9._%+-]+@byui\.edu$" title="Please enter a valid email address." required></label>
       </fieldset>
       <fieldset>
