--- a/form.html
+++ b/form.html
@@ -45,21 +45,22 @@
       </fieldset>
       <fieldset>
           <legend>Page Rating</legend>
+          <label class="slider">Page Rating Slider</label>
           <div id="rangeValue">1</div>
-          <label class="slider">Page Rating Slider<input type="range" id="rating" name="rating" min="1" max="10" value="1" step="1" list="rangeValues">
-          </label>
-          <datalist id="rangeValues">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-          <option value="6">6</option>
-          <option value="7">7</option>
-          <option value="8">8</option>
-          <option value="9">9</option>
-          <option value="10">10</option>
-          </datalist>
+            <input type="range" id="r" name="rating" min="1" max="10" value="0" step="1" list="rangeValues">
+            <datalist id="rangeValues">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+            </datalist>
+          </div>
       </fieldset>
       <input type="submit" value="Rate My Page"  class="submitBtn">
       </form>
