chamber nav fix

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,7 +25,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="join.html">Join</a></li>
           <li><a href="discover.html">Discover</a></li>
-          <li><a href="#">Events</a></li>
+          <li><a href="directory.html">Directory</a></li>
         </ul>
     </nav>
     <main class="grid-home">
