directory nav and footers the same

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -52,7 +52,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
+        <p>&copy; <span id="currentYear"></span> &bull; Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/chamber.js"></script>
