--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -23,7 +23,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join</a></li>
           <li class="active"><a href="discover.html">Discover</a></li>
-          <li><a href="#">Events</a></li>
+          <li><a href="directory.html">Directory</a></li>
         </ul>
     </nav>
 </header>
@@ -80,9 +80,10 @@
         </section>
     </main>
     <footer>
-        <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
+        <p>&copy; <span id="currentYear"></span> &bull; Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
         <p id="lastModified"></p>
     </footer>
+    <script src="scripts/chamber.js"></script>
     <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/getDates.js"></script>
 </body>
