codepen IDK what I am doing!!!

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <header>
+        <h1 id="h1">City of Apopka Chamber of Commerce</h1>
     <nav>
         <a id="menu"></a>
         <ul class="navigation">
