--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-       
+        <h1 id="h1">City of Apopka Chamber of Commerce</h1>
     </header>
     <nav>
         <a id="menu"></a>
@@ -29,7 +29,18 @@
         </ul>
     </nav>
     <main>
-        
+        <div class="menu">
+            <button id="grid">⏹️Grid</button>
+            <button id="list">📄List</button>
+        </div>
+        <hr>
+        <article class="grid">
+            <section>
+                <img src="images/allspc-office.jpg" alt="all pest control" />
+                <h3>All Pest Control</h3>
+                <p></p>
+                <a href="data/members.json" target="_blank">Website</a>
+            </section>
     </main>
     <footer>
         <p>&copy; <span id="currentYear"></span> &bull; Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
