--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
         <li><a href="form.html">Form</a></li>
         </ul>
     </nav>
-    <main class="grid">
+    <main>
         <div class="hero">
             <picture>
                 <source srcset="images/hero-small.webp" media="(max-width: 500px)">
-                <source srcset="images/hero-medium.webp" media="(max-width: 1000px)">
                 <img src="images/hero-large.webp" alt="Feather River California Temple" width="1500" height="998">
             </picture>
         <div class="herolabel">
