weather fix IDK

--- a/index.html
+++ b/index.html
@@ -36,27 +36,24 @@
                 <source srcset="images/hero-small.webp" media="(max-width: 500px)">
                 <img src="images/hero-large.webp" alt="Feather River California Temple" width="1500" height="998">
             </picture>
-        <div class="herolabel">
+            <div class="herolabel">
             <p>Feather River California</p>
-        </div>
+            </div>
         </div>
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card-box">
             <h3>Learning Activities</h3>
-            <div>
-                <h4></h4>
-                <p></p>
-            </div>
+
         </section>
         <section class="card">
             <h3>Information</h3>
-            <p>Apopka, Florida</p>
-            <p>Weather: <span id="weather">Always Sunny</span></p>
-            <figure class="weather">
+            <div class="weather">
                 <img id="weather-icon" src="data:," alt="">
-                <figcaption></figcaption>
-              </figure>
-            <p class="card-paragraph-3">Number of Visits:&nbsp;&nbsp;&nbsp;<span class="visits"></span></p>
+                <span id="currentTemp"></span><figcaption id="weather-description"></figcaption>
+            </div>
+            <div>
+            <p><span class="label">Number of Visits:&nbsp;&nbsp;&nbsp;</span><span class="visits">Welcome First Timer!</span></p>
+            </div>
         </section>
         <section id="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d111984.65253155297!2d-81.60617371731246!3d28.70399016539981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77739cc157c19%3A0xd71d0f8ffc80e888!2sApopka%2C%20FL!5e0!3m2!1sen!2sus!4v1700536635540!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
