--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a id="menu"></a>
         <nav>
         <ul class="navigation">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
         <li><a href="week01/chamber-site-plan.html" target="_blank">Site Plan</a></li>
         <li><a href="chamber/index.html" target="_blank">Chamber</a></li>
         <li><a href="form.html">Form</a></li>
