--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <section class="card">
             <h3>Information</h3>
             <div class="weather">
-                <img id="weather-icon" src="data:," alt="">
-                <span id="currentTemp"></span><figcaption id="weather-description"></figcaption>
+                <img id="weather-icon" src="scripts/weather.js" alt="#">
+                <span id="current-temp"></span><figcaption id="weather-description"></figcaption>
             </div>
             <div>
             <p><span class="label">Number of Visits:&nbsp;&nbsp;&nbsp;</span><span class="visits">Welcome First Timer!</span></p>
