--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,14 +65,29 @@
             <p></p>
         </section>
         <section class="card">
-            <h3>Current Events</h3>
-            <p></p>
-            <p></p>
-        </section>
-        <section class="card">
-            <h3>Information</h3>
-            <p>Weather: <span id="weather">Always Sunny</span></p>
-            <p>Number of Visits:</p>
+            <h3>City Concerts & Events</h3>
+            <div class="card">  
+                <h3>Event 1</h3>
+                <P>Date</P>
+                <p>Time</p>
+                <p>Location</p>
+                <p>Description</p>
+            </div>
+            <div class="card">
+                <h3>Event 2</h3>
+                <P>Date</P>
+                <p>Time</p>
+                <p>Location</p>
+                <p>Description</p>
+            </div>
+            <div class="card">
+                <h3>Event 3</h3>
+                <P>Date</P>
+                <p>Time</p>
+                <p>Location</p>
+                <p>Description</p>
+            </div>
+        </div>
         </section>
 
     </main>
